import Objets

class Equipement:
    def __init__(self, arme : Objets, armure : Objets) : 
        self.arme = arme
        self.armure =  armure
    
    def equip() :
        # TODO: implémenter l'action d'EQUIPER avec le LLM
        print("implémenter l'action d'EQUIPER avec le LLM")  

    def unequip() :
        # TODO: implémenter l'action de DESEQUIPER avec le LLM
        print("implémenter l'action de DESEQUIPER avec le LLM")  
        
