import Objets

class Inventaire :
    def __init__(self, objetsInv : Objets) : 
        self.objetsInv = Objets[objetsInv]
